EBookStoreProject/k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ebookstore-app
  namespace: ebookstore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ebookstore-app
  template:
    metadata:
      labels:
        app: ebookstore-app
    spec:
      containers:
      - name: ebookstore
        image: marijadimitrieska/ebook-application:latest
        ports:
        - containerPort: 80
