EBookStoreProject/k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ebookstore
spec:
  ports:
  - port: 1433
    targetPort: 1433
  clusterIP: None
  selector:
    app: mssql
